# cpython-interface

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  pscript.py
PY/: pscript.py
include/: cpythonCVInterface.h  cpythonInterface.h
src/: cpythonCVInterface.cpp  cpythonInterface.cpp
